# auto-mail-pilot

./: .gitignore  Cargo.toml  IMPLEMENTATION_PROMPT.md  POST_MORTEM.md  PROMPT_設計書.md  README.md  settings.json  skill.md  開発ノート.md  開発プラン.md
.claude/: settings.local.json
desktop/: README.txt  app.go  config.json  config.json.example  go.mod  main.go  wails.json
desktop/frontend/: index.html
desktop/frontend/src/: App.vue  style.css
desktop/frontend/src/components/: HistoryTab.vue  MailTab.vue  SettingsTab.vue
desktop/frontend/wailsjs/go/: models.ts
desktop/frontend/wailsjs/go/main/: App.d.ts  App.js
desktop/internal/api/: api.go
desktop/internal/config/: config.go
desktop/internal/logger/: logger.go
desktop/internal/models/: models.go
docs/: design.md
gas/: .clasp.json  Code.gs
src/: api.rs  app.rs  file_utils.rs  main.rs  models.rs  utils.rs
src/ui/: history_panel.rs  login_panel.rs  mail_panel.rs  mod.rs  settings_panel.rs
web/: index.html
